6.k8s-related/ingresses/nginx-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-svc
spec: 
  type: ClusterIP 
  selector: 
    app: nginx-dpl 
  ports: 
  - name: nginx-ports
    port: 3000 
    targetPort: 80
