6.k8s-related/ingresses/nginx-ingress.yaml
# sub domain is : k8s-nginx.devnerd.store
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-nginx-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.class: "nginx" 
spec: 
  ingressClassName: "nginx"
  tls: 
    - hosts: 
        - "k8s-nginx.devnerd.store"
      secretName: k8s-nginx-tls  
  rules: 
    - host: k8s-nginx.devnerd.store
      http: 
        paths: 
          - pathType: Prefix
            path: "/" 
            backend: 
              service: 
                name: nginx-svc 
                port: 
                  number: 3000 # match service 
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata: 
#   name: my-nginx-ingress
# spec: 
#   rules: 
#     - host: k8s-nginx.devnerd.store
#       http: 
#         paths: 
#           - pathType: Prefix
#             path: "/" 
#             backend: 
#               service: 
#                 name: nginx-svc 
#                 port: 
#                   number: 3000 # match service
